--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,18 @@
 permalink:           pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Записки об НЛП
+tagline:             'Заметки, упражнения и мысли'
+description:         'Полезные вещи, которые я узнал и понял за время изучения НЛП.'
+url:                 http://konstantin-morenko.ru
 baseurl:             ''
-paginate:            5
+paginate:            10
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Константин Моренко
+  url:               https://konstantin-morenko.ru
+  email:             me@konstantin-morenko.ru
 
 # Custom vars
 version:             1.0.0
